--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
-    "styled-components": "^6.1.9"
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/styled-components": "^5.1.34",
     "typescript": "^5"
   }
 }
