--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-API_URL=https://iddaa-frontend-challenge.furkanportakalx.workers.dev/api
+NEXT_PUBLIC_API_URL=https://iddaa-frontend-challenge.furkanportakalx.workers.dev/api
